add bev generation scripts

--- a/notebooks/reading_gt.ipynb
+++ b/notebooks/reading_gt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e0c96387-013c-4ab9-927c-7cb637b58a3c",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/deepakduggirala/Documents/autonomous-robotics/bev-generation\n"
+      "/geode2/home/u020/deduggi/Carbonate/autonomous-robotics/bev-generation\n"
      ]
     }
    ],
@@ -20,13 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "e47a3308-05f1-4b8a-9da1-669fc56d3692",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
+    "import json\n",
+    "import zlib\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -40,37 +42,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "13f0bcbb-b340-4724-863d-920913dac0f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataroot = Path('/Users/deepakduggirala/Documents/autonomous-robotics/v1.0-mini/').resolve()\n",
-    "gt_db_path = dataroot / Path('lmdb/samples/GT_CAM_FRONT')\n",
-    "gt_db = lmdb.open(path=str(gt_db_path), readonly=True, map_size=int(50 * 1024 * 1024 * 1024)) # max possible size of db is 50 GB"
+    "dataroot = Path('/N/slate/deduggi/nuScenes-trainval').resolve()\n",
+    "gt_db_path = dataroot / Path('lmdb/samples/GT_BEV_CAM_FRONT')\n",
+    "raw_db_path = dataroot / Path('lmdb/samples/RAW_BEV_CAM_FRONT')\n",
+    "nusc_metadata_path = './v1.0-trainval-meta-custom.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "f4da7a25-923c-40c2-bb71-3d807745af24",
+   "execution_count": 8,
+   "id": "aa474d5f-29e1-48ae-a190-10070067daef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(nusc_metadata_path, 'r') as f:\n",
+    "    nusc_metadata = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8b41a6-f7a8-4916-9ca8-917932edc4eb",
+   "metadata": {},
+   "source": [
+    "### Train and Val splits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ddbc08e3-f85f-4004-95ed-6c0f717a0188",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "404"
+       "(28008, 5981)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Number of entries\n",
-    "N = gt_db.stat()['entries']\n",
-    "N"
+    "splits_dir = dataroot / 'splits'\n",
+    "train_split_path = splits_dir / 'train_roddick.txt'\n",
+    "val_split_path = splits_dir / 'val_roddick.txt'\n",
+    "\n",
+    "with open(train_split_path, 'r') as f:\n",
+    "    train_samples = f.read().split()\n",
+    "    \n",
+    "with open(val_split_path, 'r') as f:\n",
+    "    val_samples = f.read().split()   \n",
+    "    \n",
+    "len(train_samples), len(val_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "52330110-53f1-4c4c-9194-ac2b2ca336ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_token_to_cam_token = {}\n",
+    "\n",
+    "for scene in nusc_metadata.values():\n",
+    "    for sample_token, sample in scene['scene_data'].items():\n",
+    "        sample_token_to_cam_token[sample_token] = sample['CAM_FRONT']['token']"
    ]
   },
   {
@@ -78,12 +122,59 @@
    "id": "4e8aa72e-0b14-4064-b907-f3c8a449f356",
    "metadata": {},
    "source": [
-    "### Get gt using the sample data token"
+    "### Get GT and raw BEV using the cam data token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
+   "id": "d64b9b14-aa4b-4570-85b6-1201e89eb10d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_db = lmdb.open(path=str(gt_db_path), readonly=True)\n",
+    "raw_db = lmdb.open(path=str(raw_db_path), readonly=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d13875ae-aee5-4f31-8c28-b6d38d8aa3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def db_value_to_array(value):\n",
+    "    value_unzipped = zlib.decompress(value)\n",
+    "    return bytes_to_array(value_unzipped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "79914fef-84ac-4dd3-a2fc-89a1651b0c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'8ed2a7ea9a894eac8b3cd43b706f39bc'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_token = train_samples[0]\n",
+    "cam_token = sample_token_to_cam_token[sample_token]\n",
+    "cam_token_bytes = str.encode(cam_token, 'utf-8')\n",
+    "cam_token_bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "1e9a9475-9ed1-4f6b-84d8-fef015bf6771",
    "metadata": {},
    "outputs": [
@@ -93,21 +184,21 @@
        "(15, 196, 200)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "with gt_db.begin() as txn:\n",
-    "    value = txn.get(b'0113899528c54aa5b573e083ea4086b2')\n",
-    "bev_gt = bytes_to_array(value)\n",
+    "    value = txn.get(cam_token_bytes)\n",
+    "    bev_gt = db_value_to_array(value)\n",
     "bev_gt.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "f9c56e50-b55c-4a01-885e-5ad8a107b157",
    "metadata": {},
    "outputs": [
@@ -117,7 +208,7 @@
        "(12, 196, 200)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,46 +219,57 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dcf7d88c-7e1b-4c28-8154-f6320587a805",
-   "metadata": {},
-   "source": [
-    "### Read all ground truths"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fdc90fa6-9deb-4f0a-93ed-1224febc5aa9",
+   "execution_count": null,
+   "id": "7f66bb49-05c6-4fd9-95cd-d4ede3625b79",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = np.zeros((N, 15, 196, 200))\n",
-    "with gt_db.begin() as txn:\n",
-    "    for i, (key, value) in enumerate(txn.cursor()):\n",
-    "        bev_gt = bytes_to_array(value)\n",
-    "        data[i,:,:,:] = bev_gt"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "034b7aff-3af3-405d-ad10-39fd1a69b03d",
+   "execution_count": 29,
+   "id": "9043d352-917f-47d6-9a4f-3822238740b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(404, 15, 196, 200)"
+       "(14, 200, 200)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "with raw_db.begin() as txn:\n",
+    "    value = txn.get(cam_token_bytes)\n",
+    "    bev_raw = db_value_to_array(value)\n",
+    "bev_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d17613e8-4755-41e1-ba4c-1e845c2331a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 196, 200)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = utils.transform_pred(bev_raw)\n",
+    "pred.shape"
    ]
   }
  ],
@@ -187,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
