visualize bevs read from lmdb

--- a/notebooks/iou-interpolation.ipynb
+++ b/notebooks/iou-interpolation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "91df4ac4-9443-40b5-946f-1c9766d95717",
    "metadata": {},
    "outputs": [],
@@ -366,11 +366,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "367c8273-ed33-44b4-83df-f7742d1e3bb8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bev_seg_map, nusc_idx_to_color = generate_bev_seg_map(nuscenes, sample, \n",
+    "                                                                  depth_intp_method='linear', \n",
+    "                                                                  seg_cls_intp_method='nearest')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7300f9ea-da1d-4e56-b469-268a13a33fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (0, 207, 191),\n",
+       " 1: (175, 0, 75),\n",
+       " 2: (75, 0, 75),\n",
+       " 3: (112, 180, 60),\n",
+       " 4: (255, 158, 0),\n",
+       " 5: (255, 99, 71),\n",
+       " 6: (255, 69, 0),\n",
+       " 7: (255, 140, 0),\n",
+       " 8: (233, 150, 70),\n",
+       " 9: (138, 43, 226),\n",
+       " 10: (255, 61, 99),\n",
+       " 11: (220, 20, 60),\n",
+       " 12: (47, 79, 79),\n",
+       " 13: (112, 128, 144)}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nusc_idx_to_color"
+   ]
   }
  ],
  "metadata": {
